# claude-activity-log

./: .gitignore  README.md  pyproject.toml
launchd/: com.claude-activity.watcher.plist
src/claude_activity/: __init__.py  cli.py  config.py  cursor_parser.py  db.py  parser.py  queries.py  summarizer.py  timestamps.py  watcher.py
src/claude_activity/web/: __init__.py  app.py
src/claude_activity/web/templates/: base.html  error.html  index.html  live.html  month_summary.html  project.html  projects.html  search.html  session.html  sessions.html  summaries.html  today.html  week_summary.html
src/claude_activity/web/templates/partials/: daemon_status.html  live_activity.html  live_entries.html  session_context.html  summary_content.html
tests/: __init__.py  test_db.py  test_parser.py  test_summarizer.py
